// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ColourInput /> should have some hintText 1`] = `
<div
  class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lff"
>
  <div
    class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_width_full__3xgq1lff useBoxStyles_position_relative__3xgq1lfk NotchedBase_root__1ft8sxl0"
  >
    <div
      class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lff useBoxStyles_height_full__3xgq1lfh"
    >
      <div
        class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_position_relative__3xgq1lfk useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgj useBoxStyles_flexWrap_nowrap__3xgq1lhb useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhg"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_height_full__3xgq1lfh useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_pointerEvents_none__3xgq1lhw useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgj useBoxStyles_flexShrink_0__3xgq1lh9 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhs ColourInput_colouredBoxHolder__fijwir1 ColourInput_colouredBoxHolderSize_medium__fijwir3"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l8 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l1c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l2g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp"
            style="background-color: rgb(108, 17, 17);"
          />
        </div>
        <span
          class="reset_inlineText__1oah0222 useBoxStyles_display_block__3xgq1lft useBoxStyles_textAlign_left__3xgq1lfl useTextStyles_root__1xnpmd70 reset_inlineText__1oah0222 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7o useTextStyles_sizes_4__1xnpmd74 ColourInput_valueText__fijwir4 ColourInput_valueTextSize_medium__fijwir6 reset_block__1oah0223 useBoxStyles_position_absolute__3xgq1lfi"
        >
          #6c1111
        </span>
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_input__1oah0228 useBoxStyles_flexGrow_1__3xgq1lh8 ColourInput_input__fijwir0 reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_input__1oah0228 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_width_full__3xgq1lff useBoxStyles_position_relative__3xgq1lfk useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp useBoxStyles_backgroundColours_transparent__3xgq1lf5 withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8a"
          id="id"
          type="color"
          value="#6c1111"
        />
      </div>
    </div>
    <div
      class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_width_full__3xgq1lff useBoxStyles_height_full__3xgq1lfh useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_textAlign_left__3xgq1lfl useBoxStyles_pointerEvents_none__3xgq1lhw NotchedBase_borderVisualDefaults__1ft8sxl2 NotchedBase_borders_root_default__1ft8sxl4"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_leading__1ft8sxl6 InputState_natural_default_borderColour__a2a1mv5"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_middle__1ft8sxl7 InputState_natural_default_borderColour__a2a1mv5"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l18 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3g useBoxStyles_display_block__3xgq1lft useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_notchGapPlaceholder__1ft8sxl3"
        >
          placeholder
        </div>
        <label
          class="reset_inlineText__1oah0222 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l5g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l6k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l7o useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l8s useBoxStyles_display_inline__3xgq1lfx useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_pointerEvents_none__3xgq1lhw NotchedBase_placeholder_default__1ft8sxlt InputState_natural_default_colour__a2a1mv4 useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_placeholderPlacement_medium_shifted__1ft8sxl10"
          for="id"
        >
          placeholder
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_trailing__1ft8sxl8 InputState_natural_default_borderColour__a2a1mv5 InputState_natural_default_borderColour__a2a1mv5"
      />
    </div>
  </div>
  <p
    class="reset_blockText__1oah022c useBoxStyles_textAlign_left__3xgq1lfl useTextStyles_root__1xnpmd70 reset_blockText__1oah022c useTextStyles_fontWeight_normal__1xnpmd7o useTextStyles_sizes_2__1xnpmd72 reset_blockText__1oah022c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l84 HintText_hintText__down5s0 InputState_natural_default_colour__a2a1mv4"
  >
    hint text
  </p>
</div>
`;

exports[`<ColourInput /> should match snapshot 1`] = `
<div
  class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lff"
>
  <div
    class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_width_full__3xgq1lff useBoxStyles_position_relative__3xgq1lfk NotchedBase_root__1ft8sxl0"
  >
    <div
      class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lff useBoxStyles_height_full__3xgq1lfh"
    >
      <div
        class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_position_relative__3xgq1lfk useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgj useBoxStyles_flexWrap_nowrap__3xgq1lhb useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhg"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_height_full__3xgq1lfh useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_pointerEvents_none__3xgq1lhw useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgj useBoxStyles_flexShrink_0__3xgq1lh9 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhs ColourInput_colouredBoxHolder__fijwir1 ColourInput_colouredBoxHolderSize_medium__fijwir3"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l8 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l1c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l2g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp"
            style="background-color: rgb(108, 17, 17);"
          />
        </div>
        <span
          class="reset_inlineText__1oah0222 useBoxStyles_display_block__3xgq1lft useBoxStyles_textAlign_left__3xgq1lfl useTextStyles_root__1xnpmd70 reset_inlineText__1oah0222 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7o useTextStyles_sizes_4__1xnpmd74 ColourInput_valueText__fijwir4 ColourInput_valueTextSize_medium__fijwir6 reset_block__1oah0223 useBoxStyles_position_absolute__3xgq1lfi"
        >
          #6c1111
        </span>
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_input__1oah0228 useBoxStyles_flexGrow_1__3xgq1lh8 ColourInput_input__fijwir0 reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_input__1oah0228 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_width_full__3xgq1lff useBoxStyles_position_relative__3xgq1lfk useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp useBoxStyles_backgroundColours_transparent__3xgq1lf5 withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8a"
          id="id"
          type="color"
          value="#6c1111"
        />
      </div>
    </div>
    <div
      class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_width_full__3xgq1lff useBoxStyles_height_full__3xgq1lfh useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_textAlign_left__3xgq1lfl useBoxStyles_pointerEvents_none__3xgq1lhw NotchedBase_borderVisualDefaults__1ft8sxl2 NotchedBase_borders_root_default__1ft8sxl4"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_leading__1ft8sxl6 InputState_natural_default_borderColour__a2a1mv5"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_middle__1ft8sxl7 InputState_natural_default_borderColour__a2a1mv5"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l18 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3g useBoxStyles_display_block__3xgq1lft useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_notchGapPlaceholder__1ft8sxl3"
        >
          placeholder something
        </div>
        <label
          class="reset_inlineText__1oah0222 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l5g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l6k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l7o useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l8s useBoxStyles_display_inline__3xgq1lfx useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_pointerEvents_none__3xgq1lhw NotchedBase_placeholder_default__1ft8sxlt InputState_natural_default_colour__a2a1mv4 useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_placeholderPlacement_medium_shifted__1ft8sxl10"
          for="id"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_trailing__1ft8sxl8 InputState_natural_default_borderColour__a2a1mv5 InputState_natural_default_borderColour__a2a1mv5"
      />
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> should match snapshot when active 1`] = `
<div
  class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lff input-class"
>
  <div
    class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_width_full__3xgq1lff useBoxStyles_position_relative__3xgq1lfk NotchedBase_root__1ft8sxl0"
  >
    <div
      class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lff useBoxStyles_height_full__3xgq1lfh"
    >
      <div
        class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_position_relative__3xgq1lfk useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgj useBoxStyles_flexWrap_nowrap__3xgq1lhb useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhg"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_height_full__3xgq1lfh useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_pointerEvents_none__3xgq1lhw useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgj useBoxStyles_flexShrink_0__3xgq1lh9 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhs ColourInput_colouredBoxHolder__fijwir1 ColourInput_colouredBoxHolderSize_medium__fijwir3"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l8 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l1c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l2g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp"
            style="background-color: rgb(236, 64, 64);"
          />
        </div>
        <span
          class="reset_inlineText__1oah0222 useBoxStyles_display_block__3xgq1lft useBoxStyles_textAlign_left__3xgq1lfl useTextStyles_root__1xnpmd70 reset_inlineText__1oah0222 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7o useTextStyles_sizes_4__1xnpmd74 ColourInput_valueText__fijwir4 ColourInput_valueTextSize_medium__fijwir6 reset_block__1oah0223 useBoxStyles_position_absolute__3xgq1lfi"
        >
          #ec4040
        </span>
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_input__1oah0228 useBoxStyles_flexGrow_1__3xgq1lh8 ColourInput_input__fijwir0 reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_input__1oah0228 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_width_full__3xgq1lff useBoxStyles_position_relative__3xgq1lfk useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp useBoxStyles_backgroundColours_transparent__3xgq1lf5 withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8a"
          type="color"
          value="#ec4040"
        />
      </div>
    </div>
    <div
      class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_width_full__3xgq1lff useBoxStyles_height_full__3xgq1lfh useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_textAlign_left__3xgq1lfl useBoxStyles_pointerEvents_none__3xgq1lhw NotchedBase_borderVisualDefaults__1ft8sxl2 NotchedBase_borders_root_default__1ft8sxl4"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_leading__1ft8sxl6 InputState_activeBorderColour__a2a1mv1"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_middle__1ft8sxl7 InputState_activeBorderColour__a2a1mv1"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l18 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3g useBoxStyles_display_block__3xgq1lft useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_notchGapPlaceholder__1ft8sxl3"
        >
          placeholder something
        </div>
        <label
          class="reset_inlineText__1oah0222 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l5g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l6k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l7o useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l8s useBoxStyles_display_inline__3xgq1lfx useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_pointerEvents_none__3xgq1lhw NotchedBase_placeholder_default__1ft8sxlt InputState_activeColour__a2a1mv0 useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_placeholderPlacement_medium_shifted__1ft8sxl10"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_trailing__1ft8sxl8 InputState_activeBorderColour__a2a1mv1 InputState_activeBorderColour__a2a1mv1"
      />
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> should match snapshot when loading 1`] = `
<div
  class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lff input-class"
>
  <div
    class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_width_full__3xgq1lff useBoxStyles_position_relative__3xgq1lfk NotchedBase_root__1ft8sxl0"
  >
    <div
      class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lff useBoxStyles_height_full__3xgq1lfh"
    >
      <div
        class="reset_block__1oah0223 ProgressSpinner_size_medium_circular__1kpufmib ProgressSpinner_colours_primary__1kpufmi5 reset_block__1oah0223 useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_pointerEvents_none__3xgq1lhw withEnhancedInput_iconRoot__5jmdy8e withEnhancedInput_suffixIcon__5jmdy8g withEnhancedInput_iconSize_medium__5jmdy8i InputState_natural_default_colour__a2a1mv4"
      >
        <svg
          class="useBoxStyles_display_block__3xgq1lft useBoxStyles_overflow_hidden__3xgq1lfo ProgressSpinner_circular__1kpufmi1"
          viewBox="25 25 50 50"
        >
          <circle
            class="ProgressSpinner_path__1kpufmi3 ProgressSpinner_size_medium_path__1kpufmic"
            cx="50"
            cy="50"
            fill="none"
            r="20"
            stroke-miterlimit="10"
          />
        </svg>
      </div>
      <div
        class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_position_relative__3xgq1lfk useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgj useBoxStyles_flexWrap_nowrap__3xgq1lhb useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhg"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_height_full__3xgq1lfh useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_pointerEvents_none__3xgq1lhw useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgj useBoxStyles_flexShrink_0__3xgq1lh9 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhs ColourInput_colouredBoxHolder__fijwir1 ColourInput_colouredBoxHolderSize_medium__fijwir3"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l8 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l1c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l2g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp"
            style="background-color: rgb(108, 17, 17);"
          />
        </div>
        <span
          class="reset_inlineText__1oah0222 useBoxStyles_display_block__3xgq1lft useBoxStyles_textAlign_left__3xgq1lfl useTextStyles_root__1xnpmd70 reset_inlineText__1oah0222 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7o useTextStyles_sizes_4__1xnpmd74 ColourInput_valueText__fijwir4 ColourInput_valueTextSize_medium__fijwir6 reset_block__1oah0223 useBoxStyles_position_absolute__3xgq1lfi"
        >
          #6c1111
        </span>
        <input
          aria-busy="true"
          autocomplete="off"
          class="reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_input__1oah0228 useBoxStyles_flexGrow_1__3xgq1lh8 ColourInput_input__fijwir0 reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_input__1oah0228 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_width_full__3xgq1lff useBoxStyles_position_relative__3xgq1lfk useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp useBoxStyles_backgroundColours_transparent__3xgq1lf5 withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8a undefined withEnhancedInput_inputItselfSize_medium_suffixed_any__5jmdy8d"
          type="color"
          value="#6c1111"
        />
      </div>
    </div>
    <div
      class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_width_full__3xgq1lff useBoxStyles_height_full__3xgq1lfh useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_textAlign_left__3xgq1lfl useBoxStyles_pointerEvents_none__3xgq1lhw NotchedBase_borderVisualDefaults__1ft8sxl2 NotchedBase_borders_root_default__1ft8sxl4"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_leading__1ft8sxl6 InputState_natural_default_borderColour__a2a1mv5"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_middle__1ft8sxl7 InputState_natural_default_borderColour__a2a1mv5"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l18 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3g useBoxStyles_display_block__3xgq1lft useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_notchGapPlaceholder__1ft8sxl3"
        >
          placeholder something
        </div>
        <label
          class="reset_inlineText__1oah0222 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l5g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l6k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l7o useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l8s useBoxStyles_display_inline__3xgq1lfx useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_pointerEvents_none__3xgq1lhw NotchedBase_placeholder_default__1ft8sxlt InputState_natural_default_colour__a2a1mv4 useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_placeholderPlacement_medium_shifted__1ft8sxl10"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_trailing__1ft8sxl8 InputState_natural_default_borderColour__a2a1mv5 InputState_natural_default_borderColour__a2a1mv5"
      />
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> should match snapshot when touched 1`] = `
<div
  class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lff input-class"
>
  <div
    class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_width_full__3xgq1lff useBoxStyles_position_relative__3xgq1lfk NotchedBase_root__1ft8sxl0"
  >
    <div
      class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lff useBoxStyles_height_full__3xgq1lfh"
    >
      <div
        class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_position_relative__3xgq1lfk useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgj useBoxStyles_flexWrap_nowrap__3xgq1lhb useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhg"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_height_full__3xgq1lfh useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_pointerEvents_none__3xgq1lhw useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgj useBoxStyles_flexShrink_0__3xgq1lh9 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhs ColourInput_colouredBoxHolder__fijwir1 ColourInput_colouredBoxHolderSize_medium__fijwir3"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l8 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l1c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l2g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp"
            style="background-color: rgb(108, 17, 17);"
          />
        </div>
        <span
          class="reset_inlineText__1oah0222 useBoxStyles_display_block__3xgq1lft useBoxStyles_textAlign_left__3xgq1lfl useTextStyles_root__1xnpmd70 reset_inlineText__1oah0222 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7o useTextStyles_sizes_4__1xnpmd74 ColourInput_valueText__fijwir4 ColourInput_valueTextSize_medium__fijwir6 reset_block__1oah0223 useBoxStyles_position_absolute__3xgq1lfi"
        >
          #6c1111
        </span>
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_input__1oah0228 useBoxStyles_flexGrow_1__3xgq1lh8 ColourInput_input__fijwir0 reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_input__1oah0228 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_width_full__3xgq1lff useBoxStyles_position_relative__3xgq1lfk useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp useBoxStyles_backgroundColours_transparent__3xgq1lf5 withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8a"
          type="color"
          value="#6c1111"
        />
      </div>
    </div>
    <div
      class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_width_full__3xgq1lff useBoxStyles_height_full__3xgq1lfh useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_textAlign_left__3xgq1lfl useBoxStyles_pointerEvents_none__3xgq1lhw NotchedBase_borderVisualDefaults__1ft8sxl2 NotchedBase_borders_root_default__1ft8sxl4"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_leading__1ft8sxl6 InputState_error_default_borderColour__a2a1mvd"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_middle__1ft8sxl7 InputState_error_default_borderColour__a2a1mvd"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l18 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3g useBoxStyles_display_block__3xgq1lft useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_notchGapPlaceholder__1ft8sxl3"
        >
          placeholder something
        </div>
        <label
          class="reset_inlineText__1oah0222 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l5g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l6k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l7o useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l8s useBoxStyles_display_inline__3xgq1lfx useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_pointerEvents_none__3xgq1lhw NotchedBase_placeholder_default__1ft8sxlt InputState_error_default_colour__a2a1mvc useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_placeholderPlacement_medium_shifted__1ft8sxl10"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_trailing__1ft8sxl8 InputState_error_default_borderColour__a2a1mvd InputState_error_default_borderColour__a2a1mvd"
      />
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> should match snapshot when touched and invalid 1`] = `
<div
  class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lff input-class"
>
  <div
    class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_width_full__3xgq1lff useBoxStyles_position_relative__3xgq1lfk NotchedBase_root__1ft8sxl0"
  >
    <div
      class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lff useBoxStyles_height_full__3xgq1lfh"
    >
      <div
        class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_position_relative__3xgq1lfk useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgj useBoxStyles_flexWrap_nowrap__3xgq1lhb useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhg"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_height_full__3xgq1lfh useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_pointerEvents_none__3xgq1lhw useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgj useBoxStyles_flexShrink_0__3xgq1lh9 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhs ColourInput_colouredBoxHolder__fijwir1 ColourInput_colouredBoxHolderSize_medium__fijwir3"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l8 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l1c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l2g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp"
            style="background-color: rgb(108, 17, 17);"
          />
        </div>
        <span
          class="reset_inlineText__1oah0222 useBoxStyles_display_block__3xgq1lft useBoxStyles_textAlign_left__3xgq1lfl useTextStyles_root__1xnpmd70 reset_inlineText__1oah0222 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7o useTextStyles_sizes_4__1xnpmd74 ColourInput_valueText__fijwir4 ColourInput_valueTextSize_medium__fijwir6 reset_block__1oah0223 useBoxStyles_position_absolute__3xgq1lfi"
        >
          #6c1111
        </span>
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_input__1oah0228 useBoxStyles_flexGrow_1__3xgq1lh8 ColourInput_input__fijwir0 reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_input__1oah0228 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_width_full__3xgq1lff useBoxStyles_position_relative__3xgq1lfk useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp useBoxStyles_backgroundColours_transparent__3xgq1lf5 withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8a"
          type="color"
          value="#6c1111"
        />
      </div>
    </div>
    <div
      class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_width_full__3xgq1lff useBoxStyles_height_full__3xgq1lfh useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_textAlign_left__3xgq1lfl useBoxStyles_pointerEvents_none__3xgq1lhw NotchedBase_borderVisualDefaults__1ft8sxl2 NotchedBase_borders_root_default__1ft8sxl4"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_leading__1ft8sxl6 InputState_error_default_borderColour__a2a1mvd"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_middle__1ft8sxl7 InputState_error_default_borderColour__a2a1mvd"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l18 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3g useBoxStyles_display_block__3xgq1lft useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_notchGapPlaceholder__1ft8sxl3"
        >
          placeholder something
        </div>
        <label
          class="reset_inlineText__1oah0222 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l5g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l6k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l7o useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l8s useBoxStyles_display_inline__3xgq1lfx useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_pointerEvents_none__3xgq1lhw NotchedBase_placeholder_default__1ft8sxlt InputState_error_default_colour__a2a1mvc useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_placeholderPlacement_medium_shifted__1ft8sxl10"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_trailing__1ft8sxl8 InputState_error_default_borderColour__a2a1mvd InputState_error_default_borderColour__a2a1mvd"
      />
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> should match snapshot when touched and valid 1`] = `
<div
  class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lff input-class"
>
  <div
    class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_width_full__3xgq1lff useBoxStyles_position_relative__3xgq1lfk NotchedBase_root__1ft8sxl0"
  >
    <div
      class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lff useBoxStyles_height_full__3xgq1lfh"
    >
      <div
        class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_position_relative__3xgq1lfk useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgj useBoxStyles_flexWrap_nowrap__3xgq1lhb useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhg"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_height_full__3xgq1lfh useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_pointerEvents_none__3xgq1lhw useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgj useBoxStyles_flexShrink_0__3xgq1lh9 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhs ColourInput_colouredBoxHolder__fijwir1 ColourInput_colouredBoxHolderSize_medium__fijwir3"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l8 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l1c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l2g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp"
            style="background-color: rgb(108, 17, 17);"
          />
        </div>
        <span
          class="reset_inlineText__1oah0222 useBoxStyles_display_block__3xgq1lft useBoxStyles_textAlign_left__3xgq1lfl useTextStyles_root__1xnpmd70 reset_inlineText__1oah0222 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7o useTextStyles_sizes_4__1xnpmd74 ColourInput_valueText__fijwir4 ColourInput_valueTextSize_medium__fijwir6 reset_block__1oah0223 useBoxStyles_position_absolute__3xgq1lfi"
        >
          #6c1111
        </span>
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_input__1oah0228 useBoxStyles_flexGrow_1__3xgq1lh8 ColourInput_input__fijwir0 reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_input__1oah0228 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_width_full__3xgq1lff useBoxStyles_position_relative__3xgq1lfk useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp useBoxStyles_backgroundColours_transparent__3xgq1lf5 withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8a"
          type="color"
          value="#6c1111"
        />
      </div>
    </div>
    <div
      class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_width_full__3xgq1lff useBoxStyles_height_full__3xgq1lfh useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_textAlign_left__3xgq1lfl useBoxStyles_pointerEvents_none__3xgq1lhw NotchedBase_borderVisualDefaults__1ft8sxl2 NotchedBase_borders_root_default__1ft8sxl4"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_leading__1ft8sxl6 InputState_success_default_borderColour__a2a1mv7"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_middle__1ft8sxl7 InputState_success_default_borderColour__a2a1mv7"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l18 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3g useBoxStyles_display_block__3xgq1lft useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_notchGapPlaceholder__1ft8sxl3"
        >
          placeholder something
        </div>
        <label
          class="reset_inlineText__1oah0222 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l5g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l6k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l7o useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l8s useBoxStyles_display_inline__3xgq1lfx useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_pointerEvents_none__3xgq1lhw NotchedBase_placeholder_default__1ft8sxlt InputState_success_default_colour__a2a1mv6 useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_placeholderPlacement_medium_shifted__1ft8sxl10"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_trailing__1ft8sxl8 InputState_success_default_borderColour__a2a1mv7 InputState_success_default_borderColour__a2a1mv7"
      />
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> should match snapshot with both icons 1`] = `
<div
  class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lff input-class"
>
  <div
    class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_width_full__3xgq1lff useBoxStyles_position_relative__3xgq1lfk NotchedBase_root__1ft8sxl0"
  >
    <div
      class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lff useBoxStyles_height_full__3xgq1lfh"
    >
      <i
        class="useBoxStyles_display_block__3xgq1lft Icon_makeResponsiveStyle_key_bp__1gy3ire4 reset_block__1oah0223 useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_pointerEvents_none__3xgq1lhw withEnhancedInput_iconRoot__5jmdy8e withEnhancedInput_suffixIcon__5jmdy8g withEnhancedInput_iconSize_medium__5jmdy8i InputState_natural_default_colour__a2a1mv4"
        role="presentation"
      >
        <svg
          class="useBoxStyles_display_block__3xgq1lft useBoxStyles_width_full__3xgq1lff useBoxStyles_height_full__3xgq1lfh"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
      <div
        class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_position_relative__3xgq1lfk useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgj useBoxStyles_flexWrap_nowrap__3xgq1lhb useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhg"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_height_full__3xgq1lfh useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_pointerEvents_none__3xgq1lhw useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgj useBoxStyles_flexShrink_0__3xgq1lh9 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhs ColourInput_colouredBoxHolder__fijwir1 ColourInput_colouredBoxHolderSize_medium__fijwir3"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l8 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l1c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l2g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp"
            style="background-color: rgb(108, 17, 17);"
          />
        </div>
        <span
          class="reset_inlineText__1oah0222 useBoxStyles_display_block__3xgq1lft useBoxStyles_textAlign_left__3xgq1lfl useTextStyles_root__1xnpmd70 reset_inlineText__1oah0222 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7o useTextStyles_sizes_4__1xnpmd74 ColourInput_valueText__fijwir4 ColourInput_valueTextSize_medium__fijwir6 reset_block__1oah0223 useBoxStyles_position_absolute__3xgq1lfi"
        >
          #6c1111
        </span>
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_input__1oah0228 useBoxStyles_flexGrow_1__3xgq1lh8 ColourInput_input__fijwir0 reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_input__1oah0228 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_width_full__3xgq1lff useBoxStyles_position_relative__3xgq1lfk useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp useBoxStyles_backgroundColours_transparent__3xgq1lf5 withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8a undefined withEnhancedInput_inputItselfSize_medium_suffixed_any__5jmdy8d"
          type="color"
          value="#6c1111"
        />
      </div>
    </div>
    <div
      class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_width_full__3xgq1lff useBoxStyles_height_full__3xgq1lfh useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_textAlign_left__3xgq1lfl useBoxStyles_pointerEvents_none__3xgq1lhw NotchedBase_borderVisualDefaults__1ft8sxl2 NotchedBase_borders_root_default__1ft8sxl4"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_leading__1ft8sxl6 InputState_natural_default_borderColour__a2a1mv5"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_middle__1ft8sxl7 InputState_natural_default_borderColour__a2a1mv5"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l18 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3g useBoxStyles_display_block__3xgq1lft useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_notchGapPlaceholder__1ft8sxl3"
        >
          placeholder something
        </div>
        <label
          class="reset_inlineText__1oah0222 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l5g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l6k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l7o useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l8s useBoxStyles_display_inline__3xgq1lfx useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_pointerEvents_none__3xgq1lhw NotchedBase_placeholder_default__1ft8sxlt InputState_natural_default_colour__a2a1mv4 useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_placeholderPlacement_medium_shifted__1ft8sxl10"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_trailing__1ft8sxl8 InputState_natural_default_borderColour__a2a1mv5 InputState_natural_default_borderColour__a2a1mv5"
      />
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> should match snapshot with suffix icon 1`] = `
<div
  class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lff input-class"
>
  <div
    class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_width_full__3xgq1lff useBoxStyles_position_relative__3xgq1lfk NotchedBase_root__1ft8sxl0"
  >
    <div
      class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lff useBoxStyles_height_full__3xgq1lfh"
    >
      <i
        class="useBoxStyles_display_block__3xgq1lft Icon_makeResponsiveStyle_key_bp__1gy3ire4 reset_block__1oah0223 useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_pointerEvents_none__3xgq1lhw withEnhancedInput_iconRoot__5jmdy8e withEnhancedInput_suffixIcon__5jmdy8g withEnhancedInput_iconSize_medium__5jmdy8i InputState_natural_default_colour__a2a1mv4"
        role="presentation"
      >
        <svg
          class="useBoxStyles_display_block__3xgq1lft useBoxStyles_width_full__3xgq1lff useBoxStyles_height_full__3xgq1lfh"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
      <div
        class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_position_relative__3xgq1lfk useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgj useBoxStyles_flexWrap_nowrap__3xgq1lhb useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhg"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_height_full__3xgq1lfh useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_pointerEvents_none__3xgq1lhw useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgj useBoxStyles_flexShrink_0__3xgq1lh9 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhs ColourInput_colouredBoxHolder__fijwir1 ColourInput_colouredBoxHolderSize_medium__fijwir3"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l8 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l1c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l2g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp"
            style="background-color: rgb(108, 17, 17);"
          />
        </div>
        <span
          class="reset_inlineText__1oah0222 useBoxStyles_display_block__3xgq1lft useBoxStyles_textAlign_left__3xgq1lfl useTextStyles_root__1xnpmd70 reset_inlineText__1oah0222 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7o useTextStyles_sizes_4__1xnpmd74 ColourInput_valueText__fijwir4 ColourInput_valueTextSize_medium__fijwir6 reset_block__1oah0223 useBoxStyles_position_absolute__3xgq1lfi"
        >
          #6c1111
        </span>
        <input
          autocomplete="off"
          class="reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_input__1oah0228 useBoxStyles_flexGrow_1__3xgq1lh8 ColourInput_input__fijwir0 reset_trimmedBlockElement__1oah0225 reset_appearance__1oah0220 reset_input__1oah0228 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_width_full__3xgq1lff useBoxStyles_position_relative__3xgq1lfk useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcp useBoxStyles_backgroundColours_transparent__3xgq1lf5 withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8a undefined withEnhancedInput_inputItselfSize_medium_suffixed_any__5jmdy8d"
          type="color"
          value="#6c1111"
        />
      </div>
    </div>
    <div
      class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lfu useBoxStyles_width_full__3xgq1lff useBoxStyles_height_full__3xgq1lfh useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_textAlign_left__3xgq1lfl useBoxStyles_pointerEvents_none__3xgq1lhw NotchedBase_borderVisualDefaults__1ft8sxl2 NotchedBase_borders_root_default__1ft8sxl4"
    >
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_leading__1ft8sxl6 InputState_natural_default_borderColour__a2a1mv5"
      />
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_middle__1ft8sxl7 InputState_natural_default_borderColour__a2a1mv5"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l18 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3g useBoxStyles_display_block__3xgq1lft useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_notchGapPlaceholder__1ft8sxl3"
        >
          placeholder something
        </div>
        <label
          class="reset_inlineText__1oah0222 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l24 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l4c useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l5g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l6k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l7o useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l8s useBoxStyles_display_inline__3xgq1lfx useBoxStyles_position_absolute__3xgq1lfi useBoxStyles_pointerEvents_none__3xgq1lhw NotchedBase_placeholder_default__1ft8sxlt InputState_natural_default_colour__a2a1mv4 useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_noWrap__1xnpmd7r useTextStyles_sizes_4__1xnpmd74 NotchedBase_placeholderPlacement_medium_shifted__1ft8sxl10"
        >
          placeholder something
        </label>
      </div>
      <div
        class="NotchedBase_borderRegionDefaults__1ft8sxl1 NotchedBase_borders_trailing__1ft8sxl8 InputState_natural_default_borderColour__a2a1mv5 InputState_natural_default_borderColour__a2a1mv5"
      />
    </div>
  </div>
</div>
`;
